--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-scripts": "^4.0.0",
     "react-scroll": "^1.8.1",
     "react-simple-maps": "^2.1.2",
+    "react-spinners": "^0.9.0",
     "react-tooltip": "^4.2.10",
     "react-typical": "^0.1.3"
   },
