--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.21.0",
     "bootstrap": "^4.5.2",
     "d3-fetch": "^2.0.0",
     "d3-scale": "^3.2.2",
@@ -21,6 +22,7 @@
     "react-scroll": "^1.8.1",
     "react-simple-maps": "^2.1.2",
     "react-spinners": "^0.9.0",
+    "react-table": "^6.11.5",
     "react-tooltip": "^4.2.10",
     "react-typical": "^0.1.3"
   },
